force-app/main/default/objects/Activity/fields/Calendly__IsNoShow__c.field-meta.xml
<CustomField>
    <fullName>Calendly__IsNoShow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is No-Show</label>
    <type>Checkbox</type>
</CustomField>