force-app/main/default/objects/Activity/fields/eght_meet__Is_Eght_Event__c.field-meta.xml
<CustomField>
    <fullName>eght_meet__Is_Eght_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 8x8 Meeting</label>
    <type>Checkbox</type>
</CustomField>