force-app/main/default/objects/Activity/fields/PhoneBurner__Is_an_Attempt__c.field-meta.xml
<CustomField>
    <fullName>PhoneBurner__Is_an_Attempt__c</fullName>
    <formula>If(isblank (CallDisposition ), 0, 1)</formula>
    <label>Is an Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>