force-app/main/default/objects/Activity/fields/talkdesk__Talkdesk_Id__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Talkdesk_Id__c</fullName>
    <label>Talkdesk Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>