force-app/main/default/objects/Activity/fields/TwilioSF__To_Number__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__To_Number__c</fullName>
    <description>The phone number the Twilio sms was sent to.</description>
    <label>To Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>